# wav2flacyeah

./: .gitignore  CMakeLists.txt
.github/workflows/: build-windows.yml
src/: ConversionJob.h  ConversionThread.cpp  ConversionThread.h  ConverterComponent.cpp  ConverterComponent.h  Main.cpp  MainWindow.cpp  MainWindow.h
